--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <link href="styles.css" rel="stylesheet" />
     <!-- <script src="interpreter.js" type="text/javascript"></script> -->
     <script type="text/javascript">const oblivion = [];</script>
-    <script src="oblivion.parser.js" type="text/javascript"></script>
-    <script src="oblivion.interpreter.js" type="text/javascript"></script>
+    <script src="remember.js" type="text/javascript"></script>
+    <script src="remember.parser.js" type="text/javascript"></script>
+    <script src="remember.interpreter.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
+    <title>remember</title>
 </head>
 <body>
     <div id="state">
+        <b>[remember]</b><br/>
         <table id="state_table"><tbody></tbody></table>
     </div>
     <div id="box">
