--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div id="state">
-        <h1><a href="javascript:open_modal();">[] remember</a></h1><br/>
+        <h1><a href="javascript:open_modal();">[] memo</a></h1><br/>
         <table id="state_table"><tbody></tbody></table>
     </div>
     <div id="box">
@@ -56,7 +56,7 @@
         </div>
         <div id="filler"></div>
     </div>
-    <div id="modal"><div id="modal_content"><span class="close" id='close'>&times;</span>[] remember<br/>
+    <div id="modal"><div id="modal_content"><span class="close" id='close'>&times;</span>[] memo<br/>
         <p>A programming language where the last 12 lines are remembered. See more esolangs at https://danieltemkin.com/Esolangs.</p>
         <p>Write commands like:</p>
         <p>Remember p as 1, 2, 3</p>
