--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <link href="styles.css" rel="stylesheet" />
-    <script src="remember.js" type="text/javascript"></script>
-    <script src="remember.parser.js" type="text/javascript"></script>
-    <script src="remember.interpreter.js" type="text/javascript"></script>
+    <script src="src/memo.js" type="text/javascript"></script>
+    <script src="src/memo.parser.js" type="text/javascript"></script>
+    <script src="src/memo.interpreter.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
-    <title>[] remember</title>
+    <title>[]memo</title>
     <script type="text/javascript">
 
     function open_modal() {
@@ -59,6 +59,6 @@
     <div id="modal"><div id="modal_content"><span class="close" id='close'>&times;</span>[] memo<br/>
         <p>A programming language where the last 12 lines are remembered. See more esolangs at https://danieltemkin.com/Esolangs.</p>
         <p>Write commands like:</p>
-        <p>Remember p as 1, 2, 3</p>
+        <p>remember p as 1, 2, 3</p>
     </div>
 </body></html>
