--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
     const DEBUG = true;
 
-    const DEBUG_SCRIPTS = ['../src/memo.js', '../src/memo.tools.js', '../gen/memo.parser.js', '../src/memo.interpreter.js'];
+    const DEBUG_SCRIPTS = ['../src/memo.js', '../src/memo.tools.js', '../build/memo.parser.js', '../src/memo.interpreter.js'];
     const PROD_SCRIPT = ['memo.js'];
 
     function loadScripts(debug) {
