rest of the mid-refactor

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link href="styles.css" rel="stylesheet" />
     <script type="text/javascript">
-    const DEBUG = true;
+    const DEBUG = true; // Set to true for debugging peg
 
     const DEBUG_SCRIPTS = ['../src/memo.js', '../src/memo.tools.js', '../build/memo.parser.js', '../src/memo.interpreter.js'];
     const PROD_SCRIPT = ['memo.js'];
