--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,8 @@
     const DEBUG_SCRIPTS = ['../src/memo.js', '../src/memo.tools.js', '../build/memo.parser.js', '../src/memo.interpreter.js'];
     const PROD_SCRIPT = ['memo.js'];
 
-    function loadScripts(debug) {
-        const scripts = debug ? DEBUG_SCRIPTS : PROD_SCRIPT;
+    function loadScripts() {
+        const scripts = DEBUG ? DEBUG_SCRIPTS : PROD_SCRIPT;
         scripts.forEach(src => {
             const script = document.createElement('script');
             script.src = src;
@@ -18,7 +18,7 @@
             document.head.appendChild(script);
         });
     }
-    loadScripts(DEBUG);
+    loadScripts();
     </script>
     <script src="script.js" type="text/javascript"></script>
     <title>[]memo</title>
@@ -70,9 +70,23 @@
         </div>
         <div id="filler"></div>
     </div>
-    <div id="modal"><div id="modal_content"><span class="close" id='close'>&times;</span>[] memo<br/>
-        <p>A programming language where the last 12 lines are remembered. See more esolangs at https://danieltemkin.com/Esolangs.</p>
-        <p>Write commands like:</p>
-        <p>remember p as 1, 2, 3</p>
+    <div id="modal"><div id="modal_content"><span class="close" id='close'>&times;</span>
+        <p><span class="memo">[]memo</span> is a programming language for stream-of-conscious coding. Your program picks up where you left off, always becoming something new. 
+        <h3></h3>
+        <p>
+            <span class="memo">[]memo</span> is a LISP without parentheses. Instead of writing:</p>
+        <code>(defun function-name (arguments...) (body))</code>
+        <p>We define functions this way:</p>
+        <code>Remember function-name with arguments as body.</code>
+        <p>Lists are seperated by commas, <span class="inline">and</span>s or both:</p>
+        <code>Remember p as one, two, and three.</code>
+        <p>To evaluate the program, ask for me to tell you about <span class="inline">name</span>:</p>
+        <code>Tell me about name.</code>
+        <p>I read only what is on the screen; code flows off the terminal into oblivion. Like parantheses, I ignore numerals like <span class="inline">4</span> and expect <span class="inline">four</span> instead.</p>
+        <p>Cookies are used only to store program state.</p>
+
+        <p>Read more on <a href="https://github.com/rottytooth/memo">GitHub...</a></p>
+            
+        <p>This language is part of <a href="https://mitpress.mit.edu/9780262553087/forty-four-esolangs/">Forty-Four Esolangs</a>, a book by <a href="https://danieltemkin.com/Esolangs">Daniel Temkin</a>.</p>
     </div>
 </body></html>
