Grammar fixes and var with params

--- a/web/index.html
+++ b/web/index.html
@@ -71,10 +71,7 @@
         <div id="filler"></div>
     </div>
     <div id="modal"><div id="modal_content"><span class="close" id='close'>&times;</span>
-        <p><span class="memo">[]memo</span> is a programming language for stream-of-conscious coding. Your program picks up where you left off, always becoming something new. 
-        <h3></h3>
-        <p>
-            <span class="memo">[]memo</span> is a LISP without parentheses. Instead of writing:</p>
+        <p><span class="memo">[]memo</span> is a programming language for stream-of-conscious coding. Your program picks up where you left off, always becoming something new. <span class="memo">[]memo</span> is a LISP without parentheses. Instead of writing:</p>
         <code>(defun function-name (arguments...) (body))</code>
         <p>We define functions this way:</p>
         <code>Remember function-name with arguments as body.</code>
