fixes for parsing ranges

--- a/web/index.html
+++ b/web/index.html
@@ -132,10 +132,7 @@
     <div id="modal"><div id="modal_content"><span class="close" id='close'>&times;</span>
         <p><span class="memo">[]memo</span> is a  stream-of-conscious coding environment. You have one program, always becoming something new. Each time you return, it picks up where you left off. As lines of code scroll off the screen, they are forgotten.
         </p><p>    
-            <span class="memo">[]memo</span> uses natural language programming. 
-            Instead of writing:</p>
-        <code>(defun function-name (arguments...) (body))</code>
-        <p>We define functions this way:</p>
+            <span class="memo">[]memo</span> is functional and uses natural-language syntax:</p>
         <code>Remember <span class="vrbl">function-name</span> with <span class="vrbl">arguments</span> as body.</code>
         <p>List elements are seperated by commas, <span class="inline">and</span>s or both. <span class="memo">[]memo</span> ignores numerals like <span class="inline">4</span> and expects <span class="inline">four</span> instead:</p>
         <code>Remember <span class="vrbl">p</span> as one, two, and three.</code>
